--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: NorseBold;
+    src: url(../font/Norse-Bold.otf);
+}
+
 :root {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
@@ -25,14 +30,22 @@ body {
     flex: none;
     text-align: center;
     position: relative;
-    width: 500px;
+    width: clamp(250px, 40%, 500px);
 }
 
 #intro>p {
     margin: 0;
     position: absolute;
-    bottom: 0%;
-    white-space: nowrap;
+    bottom: 1%;
+    left: 0;
+    right: 0;
+    text-align: right;
+    color: rgb(225, 225, 225);
+    padding: 0 16px;
+}
+
+#intro a {
+    color: rgb(225, 225, 225);
 }
 
 #signup {
@@ -46,13 +59,26 @@ body {
     right: 0;
     top: 15%;
     display: flex;
-    padding: 16px 64px;
+    padding: 8px 64px;
     justify-content: center;
     align-items: center;
     gap: 8px;
+    font-family: NorseBold;
+    font-size: 64px;
+    color: rgb(245, 245, 245);
+    background-color: rgb(50, 50, 50, 0.8);
 }
 
 #banner img {
     width: 58px;
     height: 75px;
+    margin: 0;
+    padding: 0;
+    color: rgb(30, 30, 30);
+}
+
+#banner p {
+    margin: 0;
+    padding: 0;
+    padding-top: 16px;
 }
