--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ body {
     text-align: right;
     color: rgb(225, 225, 225);
     padding: 0 16px;
+    text-shadow: 0px 0px 2px black;
 }
 
 #intro a {
