--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -43,6 +43,7 @@ body {
     color: rgb(225, 225, 225);
     padding: 0 16px;
     text-shadow: 0px 0px 2px black;
+    font-size: 14px;
 }
 
 #intro a {
@@ -51,14 +52,18 @@ body {
 
 #signup {
     margin: 0;
+    padding: 64px 36px;
     flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #banner {
     position: absolute;
     left: 0;
     right: 0;
-    top: 15%;
+    top: 20%;
     display: flex;
     padding: 8px 64px;
     justify-content: center;
@@ -67,7 +72,7 @@ body {
     font-family: NorseBold;
     font-size: 64px;
     color: rgb(245, 245, 245);
-    background-color: rgb(50, 50, 50, 0.8);
+    background-color: rgb(75, 75, 75, 0.8);
 }
 
 #banner img {
@@ -82,4 +87,15 @@ body {
     margin: 0;
     padding: 0;
     padding-top: 16px;
+}
+
+form>div {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    min-width: 33%;
 }
