--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
     color: rgb(225, 225, 225);
     padding: 0 16px;
     text-shadow: 0px 0px 2px black;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 #intro a {
@@ -52,11 +52,24 @@ body {
 
 #signup {
     margin: 0;
-    padding: 64px 36px;
+    padding: 96px 36px;
     flex-grow: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 24px;
+}
+
+#signup > * {
+    margin: 0;
+}
+
+#signup p:first-child, #signup p:nth-child(2) {
+    font-size: 18px;
+}
+
+#signup>p+p {
+    margin-bottom: 18px;
 }
 
 #banner {
@@ -89,13 +102,27 @@ body {
     padding-top: 16px;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
 form>div {
     display: flex;
     flex-flow: row wrap;
+    gap: 24px;
+    margin-bottom: 36px;
 }
 
 .info {
     display: flex;
     flex-direction: column;
     min-width: 33%;
+}
+
+label {
+    font-size: 12px;
+    font-weight: 300;
+    color: rgb(55, 55, 55);
 }
