Style form elements
The "Log in" link still had default styling. It has been changed
to match the color of the submit button. Additionally, in the case
of the passwords not matching, there needs to be a message that
tells the user that the passwords do not match. This has been added,
given a smaller font size, made red, and has been set to hidden by
default.

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,3 +171,16 @@ button {
 legend {
     width: 100%;
 }
+
+#signup a {
+    text-decoration: none;
+    color: rgb(196, 42, 48);
+    font-weight: bold;
+}
+
+form>div>div:nth-last-child(2)::after {
+    content: "* Passwords do not match";
+    font-size: 10px;
+    color: red;
+    visibility: hidden;
+}
