Create error message for matching password fields
An error message needs to be displayed if the two password fields
do not match. Before, this was accomplished with the ::after pseudo-
element, but this cannot be changed dynamically, so it did not work.
Now, there is a new span element for this error message. Its
visibility will be updated dynamically when the passwords do and do
not match.

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ form {
     flex-direction: column;
     gap: 24px;
     padding: 0;
+    --afterVisibility: hidden;
 }
 
 form>div {
@@ -178,9 +179,8 @@ legend {
     font-weight: bold;
 }
 
-form>div>div:nth-last-child(2)::after {
-    content: "* Passwords do not match";
-    font-size: 10px;
+form>div>div:nth-last-child(2)>span {
     color: red;
+    font-size: 10px;
     visibility: hidden;
 }
