--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ body {
     justify-content: center;
     gap: 24px;
     background-color: rgb(250, 250, 250);
+    min-width: 325px;
 }
 
 #signup>* {
@@ -91,7 +92,7 @@ body {
     font-family: NorseBold;
     font-size: 64px;
     color: rgb(245, 245, 245);
-    background-color: rgb(75, 75, 75, 0.8);
+    background-color: rgb(100, 100, 100, 0.8);
 }
 
 #banner img {
@@ -113,7 +114,6 @@ form {
     flex-direction: column;
     gap: 24px;
     padding: 0;
-    --afterVisibility: hidden;
 }
 
 form>div {
@@ -148,6 +148,7 @@ input {
     border: 1px solid #E5E7EB;
     border-radius: 3px;
     height: 22px;
+    max-width: 250px;
 }
 
 input:focus {
@@ -183,4 +184,5 @@ form>div>div:nth-last-child(2)>span {
     color: red;
     font-size: 10px;
     visibility: hidden;
+    margin-top: 4px;
 }
